Fix button img alignment

--- a/less/jquery.ui.jqgrid.less
+++ b/less/jquery.ui.jqgrid.less
@@ -615,10 +615,12 @@
 
 }
 .fm-button-icon-left .ui-icon {
-  .pull-left;
+    line-height: 2.3em;
+    .pull-left;
 }
 .fm-button-icon-right .ui-icon {
-  .pull-right;
+    line-height: 2.3em;
+    .pull-right;
 }
 #nData, #pData { float: left; margin:3px;padding: 0; width: 15px; }
 /* End Eorm edit */
